crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_bool-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"false\")"
---
Ok:
  - Value:
      Bool: false
  - start: 0
    end: 5

