crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_bool.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"true\")"
---
Ok:
  - Value:
      Bool: true
  - start: 0
    end: 4

