crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_call-3.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"foo(10)(20)\")"
---
Ok:
  - PostFix:
      - - PostFix:
            - - Variable: foo
              - start: 0
                end: 3
            - - Args:
                  - - Value:
                        I32: 10
                    - start: 4
                      end: 6
              - start: 3
                end: 7
        - start: 0
          end: 7
      - - Args:
            - - Value:
                  I32: 20
              - start: 8
                end: 10
        - start: 7
          end: 11
  - start: 0
    end: 11

