crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_call.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"foo()\")"
---
Ok:
  - PostFix:
      - - Variable: foo
        - start: 0
          end: 3
      - - Args: []
        - start: 3
          end: 5
  - start: 0
    end: 5

