crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_enum_declaration-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "type_declaration().parse(\"enum Foo { A }\")"
---
Ok:
  Enum:
    name:
      - Foo
      - start: 4
        end: 9
    type_parameters: ~
    variants:
      - - - A
          - start: 11
            end: 13
        - ~

