crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_float-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"2.1\")"
---
Ok:
  - Value:
      F32: 2.1
  - start: 0
    end: 3

