crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_float.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"10.5\")"
---
Ok:
  - Value:
      F32: 10.5
  - start: 0
    end: 4

