crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_function-3.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "statement().parse(\"fn foo() { let name = 10; }\")"
---
Ok:
  - Function:
      name:
        - foo
        - start: 2
          end: 6
      type_parameters: ~
      params: []
      return_type: ~
      body:
        - stmts:
            - - Let:
                  - - name
                    - start: 14
                      end: 20
                  - - Value:
                        I32: 10
                    - start: 22
                      end: 24
              - start: 11
                end: 25
          end_expr: ~
        - start: 8
          end: 27
  - start: 0
    end: 27

